# electrum

./: Cargo.toml  electrum.7z
copper/shaders/: directional_light_fs.glsl  glslangValidatorExample.txt  triangle.frag  triangle.vert  triangle_frag.spv  triangle_noise.frag  triangle_noise_frag.spv  triangle_vert.spv
copper/shaders/src/: deferred.frag  deferred.vert  gbuffer.frag  gbuffer.vert  triangle.frag  triangle.vert  triangle_noise.frag
lib/bronze/: Cargo.toml  assets.db
lib/bronze/src/: main.rs
src/: lib.rs  main.rs
src/aluminium/: components.rs  mod.rs
src/bendalloy/: mod.rs  platonic.rs
src/brass/: mod.rs  shader.rs
src/components/: mod.rs
src/demo/: mod.rs
src/duralumin/: mod.rs
src/geometry/: mod.rs  platonic.rs
src/material/: mod.rs
src/pewter/: mod.rs
src/render/: buffer.rs  framebuffer.rs  mod.rs
src/tin/: mod.rs
src/vulkano_win/: mod.rs
src/world/: mod.rs
src/zinc/: frame.rs  fullscreen.rs  mod.rs
