[package]
name = "electrum"
version = "0.1.0"
authors = ["rmoita"]
edition = "2018"

[dependencies]
ash = "0.30.0"
image = "0.20"
winit = "0.18"
cgmath = "0.17.0"
rand = "0.7.2"
notify = "5.0.0-pre.2"
probability = "0.15.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.4", features = ["windef", "winuser"] }